Swagger. Rest api bugs fixed.